samples/_failures_safe/1761323500_86ac18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3b87679.c: In function ‘main’:
./samples/SAFE/__tmp_f3b87679.c:148:12: error: missing terminating " character
  148 |     printf("Enter number of nodes (1-%
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f3b87679.c:148:5: error: expected expression at end of input
  148 |     printf("Enter number of nodes (1-%
      |     ^~~~~~
./samples/SAFE/__tmp_f3b87679.c:148:5: error: expected declaration or statement at end of input
